@@ -1,0 +1,58 @@
+begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/**  * Copyright 2008 The Apache Software Foundation  *  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+
+begin_package
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|client
+package|;
+end_package
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|HRegionLocation
+import|;
+end_import
+
+begin_comment
+comment|/**  * Used by master and region server, so that they do not need to wait for the  * cluster to be up to get a connection.  */
+end_comment
+
+begin_interface
+specifier|public
+interface|interface
+name|ServerConnection
+extends|extends
+name|HConnection
+block|{
+comment|/**    * Set root region location in connection    * @param rootRegion    */
+specifier|public
+name|void
+name|setRootRegionLocation
+parameter_list|(
+name|HRegionLocation
+name|rootRegion
+parameter_list|)
+function_decl|;
+block|}
+end_interface
+
+end_unit
+
