@@ -287,6 +287,20 @@ name|HConstants
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|HRegionLocation
+import|;
+end_import
+
 begin_comment
 comment|/**  * The ServerManager class manages info about region servers - HServerInfo,   * load numbers, dying servers, etc.  */
 end_comment
@@ -2106,16 +2120,36 @@ argument_list|()
 condition|)
 block|{
 comment|// Store the Root Region location (in memory)
+name|HServerAddress
+name|rootServer
+init|=
+name|serverInfo
+operator|.
+name|getServerAddress
+argument_list|()
+decl_stmt|;
+name|master
+operator|.
+name|connection
+operator|.
+name|setRootRegionLocation
+argument_list|(
+operator|new
+name|HRegionLocation
+argument_list|(
+name|region
+argument_list|,
+name|rootServer
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|master
 operator|.
 name|regionManager
 operator|.
 name|setRootRegionLocation
 argument_list|(
-name|serverInfo
-operator|.
-name|getServerAddress
-argument_list|()
+name|rootServer
 argument_list|)
 expr_stmt|;
 block|}
@@ -2222,6 +2256,15 @@ name|shutdown
 argument_list|()
 expr_stmt|;
 block|}
+name|master
+operator|.
+name|connection
+operator|.
+name|setRootRegionLocation
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
 name|master
 operator|.
 name|regionManager
