@@ -461,6 +461,20 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
+name|HRegionLocation
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
 name|HServerAddress
 import|;
 end_import
@@ -660,6 +674,38 @@ operator|.
 name|Leases
 operator|.
 name|LeaseStillHeldException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|client
+operator|.
+name|ServerConnection
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|client
+operator|.
+name|ServerConnectionManager
 import|;
 end_import
 
@@ -1037,6 +1083,22 @@ name|HBaseConfiguration
 name|conf
 decl_stmt|;
 specifier|private
+specifier|final
+name|ServerConnection
+name|connection
+decl_stmt|;
+specifier|private
+specifier|final
+name|AtomicBoolean
+name|haveRootRegion
+init|=
+operator|new
+name|AtomicBoolean
+argument_list|(
+literal|false
+argument_list|)
+decl_stmt|;
+specifier|private
 name|FileSystem
 name|fs
 decl_stmt|;
@@ -1333,6 +1395,17 @@ operator|.
 name|conf
 operator|=
 name|conf
+expr_stmt|;
+name|this
+operator|.
+name|connection
+operator|=
+name|ServerConnectionManager
+operator|.
+name|getConnection
+argument_list|(
+name|conf
+argument_list|)
 expr_stmt|;
 name|this
 operator|.
@@ -3377,6 +3450,59 @@ name|void
 name|housekeeping
 parameter_list|()
 block|{
+comment|// Try to get the root region location from the master.
+if|if
+condition|(
+operator|!
+name|haveRootRegion
+operator|.
+name|get
+argument_list|()
+condition|)
+block|{
+name|HServerAddress
+name|rootServer
+init|=
+name|hbaseMaster
+operator|.
+name|getRootRegionLocation
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|rootServer
+operator|!=
+literal|null
+condition|)
+block|{
+comment|// By setting the root region location, we bypass the wait imposed on
+comment|// HTable for all regions being assigned.
+name|this
+operator|.
+name|connection
+operator|.
+name|setRootRegionLocation
+argument_list|(
+operator|new
+name|HRegionLocation
+argument_list|(
+name|HRegionInfo
+operator|.
+name|ROOT_REGIONINFO
+argument_list|,
+name|rootServer
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|haveRootRegion
+operator|.
+name|set
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 comment|// If the todo list has> 0 messages, iterate looking for open region
 comment|// messages. Send the master a message that we're working on its
 comment|// processing so it doesn't assign the region elsewhere.
